Refactored example from thumbnail to Transcription

--- a/template.yaml
+++ b/template.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Resources:
-  CreateThumbnail:
+  CreateTranscription:
     Type: AWS::Serverless::Function
     Properties:
       Handler: handler
@@ -9,7 +9,7 @@ Resources:
       Timeout: 60
       Policies: AWSLambdaExecute
       Events:
-        CreateThumbnailEvent:
+        CreateTranscriptionEvent:
           Type: S3
           Properties:
             Bucket: !Ref SrcBucket
