--- a/template.yaml
+++ b/template.yaml
@@ -1,19 +1,42 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
 Resources:
   CreateTranscription:
-    Type: AWS::Serverless::Function
+    Type: AWS::Lambda::Function
     Properties:
+      Code:
+        ZipFile: !Sub
+          print 1;
       Handler: handler
-      Runtime: runtime
+      MemorySize: 1536
+      Role:
+        Fn::GetAtt:
+        - LambdaExecutionRole
+        - Arn
+      Runtime: nodejs10.x
       Timeout: 60
-      Policies: AWSLambdaExecute
-      Events:
-        CreateTranscriptionEvent:
-          Type: S3
-          Properties:
-            Bucket: !Ref SrcBucket
-            Events: s3:ObjectCreated:*
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - lambda.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      Policies:
+      - PolicyName: root
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - logs:*
+            Resource: arn:aws:logs:*:*:*
 
   SrcBucket:
     Type: AWS::S3::Bucket
