--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
   CreateTranscription:
+    DependsOn: LambdaExecutionRole
     Type: AWS::Lambda::Function
     Properties:
       Code:
@@ -38,7 +39,18 @@ Resources:
             - logs:*
             Resource: arn:aws:logs:*:*:*
 
+  LambdaInvokePermission:
+    DependsOn: CreateTranscription
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !GetAtt CreateTranscription.Arn
+      Action: 'lambda:InvokeFunction'
+      Principal: s3.amazonaws.com
+      SourceAccount: !Ref 'AWS::AccountId'
+      SourceArn: !Sub 'arn:aws:s3:::${SrcBucket}'
+
   SrcBucket:
+    DependsOn: CreateTranscription
     Type: AWS::S3::Bucket
     # NotificationConfiguration must be commented on stack creation,
     # then uncommented and deployed as an update.
