--- a/template.yaml
+++ b/template.yaml
@@ -6,8 +6,10 @@ Resources:
     Properties:
       Code:
         ZipFile: !Sub
-          print 1;
-      Handler: handler
+          exports.handler = function(event, context) {
+            console.log('test');
+          };
+      Handler: index.handler
       MemorySize: 1536
       Role:
         Fn::GetAtt:
