--- a/template.yaml
+++ b/template.yaml
@@ -5,17 +5,40 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ZipFile: !Sub
-          exports.handler = function(event, context) {
-            console.log('test');
-          };
+        ZipFile: |       
+          from __future__ import print_function
+
+          import time
+          import boto3
+
+          def handler(event, context):
+            transcribe = boto3.client('transcribe')
+
+            job_name = "Transcribe Video"
+            job_uri = "s3://transcribe-everything-placed-here/empty.mp4"
+
+            transcribe.start_transcription_job(
+                TranscriptionJobName=job_name,
+                Media={'MediaFileUri': job_uri},
+                MediaFormat='mp4',
+                LanguageCode='en-US'
+            )
+
+            while True:
+                status = transcribe.get_transcription_job(TranscriptionJobName=job_name)
+                if status['TranscriptionJob']['TranscriptionJobStatus'] in ['COMPLETED', 'FAILED']:
+                    break
+                print("Transcribing...")
+                time.sleep(5)
+            print(status)
+            return "Complete"
       Handler: index.handler
       MemorySize: 1536
       Role:
         Fn::GetAtt:
         - LambdaExecutionRole
         - Arn
-      Runtime: nodejs10.x
+      Runtime: python3.7
       Timeout: 60
 
   LambdaExecutionRole:
