Added s£ read permission

--- a/template.yaml
+++ b/template.yaml
@@ -80,6 +80,15 @@ Resources:
               - transcribe:StartTranscriptionJob
             Resource: 
               - '*'
+      - PolicyName: read-s3-bucket
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - s3:GetObject
+            Resource: 
+              - !Sub 'arn:aws:s3:::${S3Bucket}'
 
   LambdaInvokePermission:
     DependsOn: CreateTranscription
