--- a/template.yaml
+++ b/template.yaml
@@ -77,6 +77,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
+              - transcribe:GetTranscriptionJob
               - transcribe:StartTranscriptionJob
             Resource: 
               - '*'
