Add policy for lambda to write to S3

--- a/template.yaml
+++ b/template.yaml
@@ -90,6 +90,16 @@ Resources:
               - s3:GetObject
             Resource: 
               - !Sub 'arn:aws:s3:::${S3Bucket}'
+      - PolicyName: write-s3-bucket
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+              - s3:PutObject
+              - s3:PutObjectAcl
+            Resource: 
+              - !Sub 'arn:aws:s3:::${S3Bucket}/*'
 
   LambdaInvokePermission:
     DependsOn: CreateTranscription
