--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ script:
   - chmod +x build.sh
   - ./build.sh
 deploy:
-    - provider: script
-    script: deploy.sh
-    on:
-      branch: master
+  provider: script
+  script: deploy.sh
+  on:
+    branch: master
 
 notifications:
   email: false
